terraform/ecs/alb-private-subnets/alb.tf
resource "aws_lb" "this" {
  name               = "ecs-alb"
  load_balancer_type = "application"
  subnets            = var.public_subnets
  security_groups    = [aws_security_group.alb.id]
}
