terraform/ecs/alb-private-subnets/route-table-public-assoc.tf
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnets)
  subnet_id      = var.public_subnets[count.index]
  route_table_id = aws_route_table.public.id
}
