terraform/ecs/alb-private-subnets/service.tf
resource "aws_ecs_service" "app" {
  name            = "mi-servicio-terra"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.this.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = aws_subnet.private[*].id
    security_groups = [aws_security_group.ecs.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.this.arn
    container_name   = "mi-app"
    container_port   = 3000
  }

  depends_on = [aws_lb_listener.http]
}
